# Wynagrodzenia_Bader

./: chorobowe.py  dni_pracujace.py  dni_tygodnia.py  dzien_tygodnia.py  main.py  miesiac.py  nadgodziny.py  pd_timestamp.py  pyproject.toml  replace_str.py  salary_db.json  salary_dictionary.py  skladki.py  stawka.py  swieta.py  urlop.py
